--- a/css/styles.css
+++ b/css/styles.css
@@ -63,12 +63,13 @@ body	{ background-color:#ccc; text-align:center;	}
 
 h1, h2, h3, h4, h5, h6 { font-weight: bold; color: #000; }
 
-h1 { font-size:28px; }
+h1 { font-size:32px; }
 h2 { font-size:20px; }
 h3 { font-size:16px; }
 h4 { font-size:14px; }
 h5 { font-size:14px; }
 h6 { font-size:14px; }
+h7 { font-size:24px: }
 
 h1 img, h2 img, h3 img, h4 img, h5 img, h6 img { margin: 0; }
 
