--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,8 @@
 /* Reset */
 
 html, body { margin: 0; padding: 0; border: 0;  
-				background: transparent; font-size:12px; }
+				
+			background: transparent; font-size:12px; }
 
 div, span, article, aside, footer, header, hgroup, nav, section,
 h1, h2, h3, h4, h5, h6, p, blockquote, a, ol, ul, li, 
@@ -59,6 +60,13 @@ ul.b { list-style: square;
       font-size: 20px;
 }
 
+ul.q { list-style-type: upper-roman;
+       list-style-position:outside;
+       padding-left: 1rem;
+
+      }
+
+
 .styled {
   list-style: none;
   padding: 0;
@@ -98,7 +106,7 @@ ul .emoji-list > li:hover:before {
 /* Global */
 
 html 	{	}
-/* body	{ background-color:#FFFFCC; text-align:center;	}*/
+/*body	{ background-color:#FFFFCC; text-align:center;	} */
 body	{ background-image:url('../images/a2.jpg'); background-repeat:no-repeat; padding-right: 50px;text-align:center;}
 
 
@@ -125,7 +133,9 @@ p .left			{ margin: 1.5em 1.5em 1.5em 0; padding: 0; }
 p .right 		{ margin: 1.5em 0 1.5em 1.5em; padding: 0; }
 
 a           	{   }
-a:link			{ color: #00f;  }
+ a:link			{ color: #00f;  }
+/* a:link			{ color: #FF6347;  } */
+
 a:visited		{ color: #0f0;  }
 a:active		{ color: #000;  }
 a:focus			{ color: #666;  }
