--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,9 @@ a           	{   }
 a:visited		{ color: #0f0;  }
 a:active		{ color: #000;  }
 a:focus			{ color: #666;  }
-a:hover     	{ color: #f00;  }
+ a:hover     	{ color: #f00;  } 
+/*a:hover     	{color: #0000FF; }	*/
+
 
 blockquote  	{ color:#000; font-size:12px; }
 
@@ -234,12 +236,15 @@ code, pre		{ background-color:#FF9; padding:2px 0px; margin:4px 25px;
 #subbanner h1       {font-size: 26px; text-align:center; color:Tomato; }
 
 
-#rightside 			{ padding:20px; margin-left:670px; }
-#rightsidea 		{ padding:20px; margin-left:670px;  }
+#rightside 			{ padding:20px; margin-left:670px; background-color:#FFFFCC}
 #rightside h2		{width: 50%; text-align:center; color:#600; margin:20px 0 10px 0;}
 #rightside h3       {width: 60; text-align:center; color:#600; margin:20px 0 10px 0;}
 #rightside h4 		{width: 60; text-align:center; color:#600; margin:20px 0 10px 0;}
-#rightside ul li a   {   }
+#rightside ul li a   { color:fuchsia;   }
+#rightside	a:hover		{ color:#fff; background-color:navy;	}
+#rightside	a:focus 	{ color:#fff;	}
+
+
 	
 }
 #rightside p		{ text-align:left; right:150%; margin:5px 0; }
